fix nav overlap

--- a/team3-CEAMS-frontend/app/styles/app.css
+++ b/team3-CEAMS-frontend/app/styles/app.css
@@ -1,3 +1,7 @@
+.spacer {
+  height: 155px;
+}
+
 /*home-page specific style */
 .home.page >
 .ui.inverted.vertical.segment {
